Fix the bug by running 'mvn test'